testsuite/tests/parser/should_run/T26415.hs
{-# LANGUAGE MultilineStrings #-}

main :: IO ()
main = do
  print "\	\"
  print """\	\"""
