testsuite/tests/parser/should_fail/StringInterpolationEscapeOverflow.hs
{-# LANGUAGE StringInterpolation #-}

s :: String
s = s"\xfffffffffff"
